<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".otherScreens.AdminDashboard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_back_from_admin_portal"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/back_arrow"
            android:layout_marginStart="16dp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/admin_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_dashboard"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/admin_dashboard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"


            >

            <TextView
                android:id="@+id/users"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#CC1212"
                android:textStyle="bold"
                android:background="@drawable/borderbackground"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/users"/>

            <TextView
                android:id="@+id/data"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#CC1212"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/data"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/linear1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/features"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#CC1212"
                android:textStyle="bold"
                android:background="@drawable/borderbackground"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/features"/>

            <TextView
                android:id="@+id/analysis"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#CC1212"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/analysis"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/linear2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/configuration"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#CC1212"
                android:textStyle="bold"
                android:background="@drawable/borderbackground"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/listing"/>

            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#CC1212"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/details"/>

        </LinearLayout>

        <TextView
            android:id="@+id/add_categories"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="#CC1212"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/linear3"
            android:text="@string/add_categories"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>