<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AuthenticationScreens.Login_SignupScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_for_login_signup_option"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        >

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/linear2"
            android:gravity="center"
            android:layout_marginBottom="120dp"
            android:background="@drawable/background_bookpro"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/book_pro_logo"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_pro"
                android:textColor="@color/black"
                android:textSize="48sp"/>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            >

            <TextView
                android:id="@+id/log_in"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@drawable/borderbackground"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/log_in"/>

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#000000"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/register"/>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_for_register_users_options"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@drawable/background_bookpro"
        >


        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"

            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/book_pro_logo"
                android:layout_marginTop="50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_pro"
                android:textColor="@color/black"
                android:layout_marginTop="38dp"
                android:textSize="48sp"/>






        </LinearLayout>

        <TextView
            android:id="@+id/register_as_customer"
            android:layout_width="227dp"
            android:layout_height="53dp"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/register_as_customer"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="#B61F7A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear3"/>

        <TextView
            android:id="@+id/register_as_suppliers"
            android:layout_width="227dp"
            android:layout_height="53dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="#B61F7A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_as_customer"
            android:text="@string/register_as_suppliers"/>

        <!--<TextView
            android:id="@+id/register_as_admin"
            android:layout_width="227dp"
            android:layout_height="53dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="#B61F7A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_as_suppliers"
            android:text="@string/register_as_admin"/> -->

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>