<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".otherScreens.UserProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_back_from_user_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/back_arrow"
            android:layout_marginStart="16dp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"
            android:layout_marginStart="20dp"
            android:padding="1dp"
            android:scaleType="centerCrop"
            android:id="@+id/img_user"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_back_from_user_profile"/>


        <TextView
            android:id="@+id/txt_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Harsh Kaushik"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_user" />

        <TextView
            android:id="@+id/register_as_customer"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/FOLLOW"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_user_name"/>

        <TextView
            android:id="@+id/register_as_suppliers"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/borderbackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_as_customer"
            android:text="@string/SEND_SMS"/>

        <TextView
            android:id="@+id/user_make_a_call"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/borderbackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_as_suppliers"
            android:text="@string/MAKE_A_CALL"/>

        <TextView
            android:id="@+id/profile_logout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/Log_out"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_make_a_call"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>