<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".otherScreens.AddProduct">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white">

            <ImageView
                android:id="@+id/img_back_from_add_product"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/back_arrow"
                android:layout_marginStart="16dp"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_add_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/add_product"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_back_from_add_product" />

            <ImageView
                android:id="@+id/img_of_product"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/download"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:padding="10dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_add_product" />

            <EditText
                android:id="@+id/edttxt_name_of_product"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:inputType="textPersonName"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/name_of_destination"
                android:background="@drawable/square_border_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_of_product"/>

            <EditText
                android:id="@+id/edttxt_category"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:inputType="textPersonName"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/category"
                android:background="@drawable/square_border_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edttxt_name_of_product"/>


            <EditText
                android:id="@+id/edttxt_price_of_product"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#DD0F0F"
                android:textStyle="bold"
                android:inputType="number"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/price"
                android:background="@drawable/square_border_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edttxt_category"/>

            <EditText
                android:id="@+id/edttxt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="8"
                android:textColor="@color/black"
                android:minLines="6"
                android:gravity="top|start"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/square_border_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edttxt_price_of_product"
                />


            <TextView
                android:id="@+id/btn_add_product"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edttxt_description"
                android:text="@string/add_product"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</FrameLayout>